NXP-10878: Remove default spacing from tables, fix display on tags

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -145,9 +145,9 @@ border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }
 /* =Labels and tags */
 .tag { background: "color.major.stronger (__FLAVOR__ background)"; border-radius: 3px; color: #fff; display: block; margin: .2em; padding: 0 .3em;}
 .tagLink { display: inline-block }
-.tagLink a { color: #fff; display: inline-block; opacity: .8; padding: 0 0 0 .2em; text-decoration: none }
-.tagLink a:hover { opacity: 1 }
-.tagLink img { border-left: 1px dotted rgba(255,255,255,0.4); display: inline; margin: 0 -0.1em -0.3em .2em }
+.tagLink a { color: #fff; opacity: .8; padding: 0 0 0 .2em; text-decoration: none }
+.tagLink img { display: inline; margin: 0 -0.1em -0.2em .2em; opacity: .7 }
+.tagLink a:hover, .tagLink img:hover { opacity: 1 }
 
 .user, span.user, .group, span.group { background: url("${basePath}/icons/user.png") no-repeat scroll 2px 2px transparent; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; box-shadow: -1px -2px 2px rgba(140, 140, 140, 0.2) inset, 1px 1px 1px #fff inset; color: "gray.dark (__FLAVOR__ color)"; display: inline-block; opacity: 1; padding: .1em .3em .1em 1.8em; white-space: nowrap }
 .group, span.group { background: url("${basePath}/icons/group.png") no-repeat scroll 2px 2px transparent }
